Added AOS for scroll animations Added different scroll animations for components using AOS library

--- a/src/components/projects/style.css
+++ b/src/components/projects/style.css
@@ -59,7 +59,7 @@
   transition: all 0.5s linear;
 }
 .services__box:hover {
-  background: #ff4a57;
+  background: #204060;
 }
 .commonIcons {
   font-size: 20px;
