--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,4 +1,4 @@
-.navbar {
+.header {
   width: 100%;
   height: 100px;
   position: fixed;
@@ -8,22 +8,27 @@
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
 }
 
-.navbar__container {
+.wrapper {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.header__container {
   display: flex;
   height: 100px;
   align-items: center;
   justify-content: space-between;
 }
-.navbar__left-logo img {
+.header__left-logo img {
   width: 110px;
 }
 
-.navbar__right {
+.header__right {
   display: flex;
   list-style-type: none;
   float: left;
 }
-.navbar__right li a {
+.header__right li a {
   text-decoration: none;
   color: #fff;
   font-weight: 500;
@@ -31,14 +36,8 @@
   padding: 0 15px;
 }
 
-.navbar__right li :hover {
+.header__right li :hover {
   cursor: pointer;
-}
-
-/* Helpers */
-.container {
-  width: 1200px;
-  margin: 0 auto;
 }
 
 .toggle {
@@ -56,20 +55,12 @@
   display: none;
 }
 @media (max-width: 765px) {
-  .container {
+  .wrapper {
     width: 100%;
     padding: 0 50px;
   }
-  .col-6 {
-    width: 100%;
-  }
-  .col-3 {
-    width: 100%;
-  }
-  .col-4 {
-    width: 100%;
-  }
-  .navbar__right {
+
+  .header__right {
     flex-direction: column;
     width: 100%;
     align-items: center;
@@ -78,32 +69,12 @@
     top: 0;
     left: 0;
   }
-  .navbar__right li a {
+  .header__right li a {
     display: block;
     padding: 20px 0;
     font-size: 14px;
   }
   .toggle {
     display: flex;
-  }
-  .banner__img img {
-    display: none;
-  }
-  .header__section h1 {
-    font-size: 35px;
-    font-weight: 700;
-    margin-bottom: 20px;
-  }
-  .header__section p {
-    font-size: 20px;
-    font-weight: 300;
-    line-height: 30px;
-    margin-bottom: 50px;
-  }
-  .common {
-    width: 100%;
-  }
-  .h-650 {
-    height: auto;
   }
 }
