--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -1,4 +1,4 @@
-.header {
+.home {
   width: 100%;
   height: 100vh;
   background: url("../../images/bg.jpg");
@@ -8,35 +8,35 @@
 }
 
 /* Helpers */
-.container {
+.home__container {
   width: 1200px;
   margin: 0 auto;
 }
 
 /* Grid System */
-.row {
+.home__container__flex {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
 }
-.col-6 {
+.home__container__flex__box {
   width: 50%;
 }
 
-/* header */
-.header__content {
+/* home */
+.home__container__flex__box__content {
   display: flex;
   align-items: center;
   height: 100vh;
   width: 100%;
   color: #fff;
 }
-.header__ul {
+.home__container__flex__box__ul {
   list-style-type: none;
   display: flex;
   margin-bottom: 20px;
 }
-.header__ul li {
+.home__container__flex__box__ul li {
   width: 70px;
   height: 70px;
   display: block;
@@ -49,85 +49,59 @@
   border: 2px solid #ff4a57;
 }
 
-.header__ul li p {
+.home__container__flex__box__ul li p {
   color: #fff;
   font-size: 15px;
   text-align: center;
 }
-.header__ul li:hover {
+.home__container__flex__box__ul li:hover {
   background: #fff;
   border: 2px solid transparent;
 }
-.header__ul li:hover .headerIcon {
+.home__container__flex__box__ul li:hover .homeIcon {
   color: #ff4a57;
 }
-.header__ul li:first-child {
+.home__container__flex__box__ul li:first-child {
   margin-left: 0;
 }
-.header__section h1 {
+.home__container__flex__box__section h1 {
   font-size: 57px;
   font-weight: 700;
   margin-bottom: 20px;
 }
-.header__section p {
+.home__container__flex__box__section p {
   font-size: 26px;
   font-weight: 300;
   line-height: 40px;
   margin-bottom: 50px;
 }
 
-.banner__img {
+.home__img {
   padding: 0 30px;
   margin-top: 150px;
 }
 
 @media (max-width: 765px) {
-  .container {
+  .home__container {
     width: 100%;
     padding: 0 50px;
   }
-  .col-6 {
+  .home__container__flex__box {
     width: 100%;
   }
-  .col-3 {
-    width: 100%;
-  }
-  .col-4 {
-    width: 100%;
-  }
-  .navbar__right {
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-    background: #1f2235;
-    position: fixed;
-    top: 0;
-    left: 0;
-  }
-  .navbar__right li a {
-    display: block;
-    padding: 20px 0;
-    font-size: 14px;
-  }
-  .toggle {
-    display: flex;
-  }
-  .banner__img img {
+
+  .home__img img {
     display: none;
   }
-  .header__section h1 {
+  .home__container__flex__box__section h1 {
     font-size: 35px;
     font-weight: 700;
     margin-bottom: 20px;
   }
-  .header__section p {
+  .home__container__flex__box__section p {
     font-size: 20px;
     font-weight: 300;
     line-height: 30px;
     margin-bottom: 50px;
-  }
-
-  .h-650 {
-    height: auto;
   }
 }
