--- a/src/components/common/style.css
+++ b/src/components/common/style.css
@@ -1,21 +1,19 @@
 .mainHeader {
-  font-size: 32px;
+  font-size: 2.5vw;
   margin-bottom: 20px;
   color: #fff;
 }
 .mainContent {
-  font-size: 16px;
+  font-size: 1.2vw;
   color: #dfdfdf;
 }
 .commonBorder {
-  background: #ff4a57;
+  background: #ffdb4d;
   height: 3px;
   width: 100px;
   margin: 30px auto;
 }
-/* .common {
-  width: 100%;
-} */
+
 .common {
   width: 33.33333333333333%;
   margin: 20px auto;
