--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -72,7 +72,7 @@
   .header__right li a {
     display: block;
     padding: 20px 0;
-    font-size: 14px;
+    font-size: 1vw;
   }
   .toggle {
     display: flex;
