--- a/src/components/skills/style.css
+++ b/src/components/skills/style.css
@@ -1,6 +1,7 @@
 .skills {
   width: 100%;
-  background: url("../../images/bg.jpg");
+  background: #1f2235;
+
   padding: 100px 0;
 }
 .skills__container {
