--- a/src/components/common/style.css
+++ b/src/components/common/style.css
@@ -1,10 +1,10 @@
 .mainHeader {
-  font-size: 2.5vw;
+  font-size: 40px;
   margin-bottom: 20px;
   color: #fff;
 }
 .mainContent {
-  font-size: 1.2vw;
+  font-size: 18px;
   color: #dfdfdf;
 }
 .commonBorder {
