--- a/src/components/blogs/style.css
+++ b/src/components/blogs/style.css
@@ -46,7 +46,7 @@
   color: #ffdb4d;
 }
 .blogs__box-p {
-  font-size: 1.2vw;
+  font-size: 16px;
   color: #dfdfdf;
   padding: 2vw;
   text-decoration: none;
