--- a/src/components/projects/style.css
+++ b/src/components/projects/style.css
@@ -37,7 +37,7 @@
   color: #ff4a57;
 }
 .projects__box-p-subheading {
-  font-size: 1vw;
+  font-size: 16px;
   color: #ffdb4d;
 }
 .projects__box:hover .commonIcons {
@@ -47,7 +47,7 @@
   color: #fff;
 }
 .projects__box-header {
-  font-size: 1vw;
+  font-size: 20px;
   font-weight: 500;
   margin-left: "2vw";
   display: inline;
