--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -22,7 +22,7 @@
   flex-wrap: wrap;
 }
 .home__container__flex__box {
-  width: 50%;
+  width: 50%
 }
 
 /* home */
@@ -82,6 +82,8 @@
   padding: 30px;
   margin-top: 80px;
   margin-left: 60px;
+  width:100%;
+  height:100%;
   border-radius:100%;
 }
 .home__img img {
